--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -551,10 +551,10 @@
 - name: qr(Tensor self)
   self: not_implemented("qr")
 
-- name: random_(Tensor self, int64_t from, int64_t to, Generator generator)
+- name: random_(Tensor self, int64_t min, int64_t max, Generator generator)
   self: zeros_like(grad)
 
-- name: random_(Tensor self, int64_t to, Generator generator)
+- name: random_(Tensor self, int64_t max, Generator generator)
   self: zeros_like(grad)
 
 - name: random_(Tensor self, Generator generator)
