Also install THCGeneral.hpp
Signed-off-by: Edward Z. Yang <ezyang@fb.com>

--- a/aten/src/THC/CMakeLists.txt
+++ b/aten/src/THC/CMakeLists.txt
@@ -59,6 +59,7 @@ set(ATen_CUDA_SRCS ${ATen_CUDA_SRCS}
 INSTALL(FILES
           THC.h
           ${CMAKE_CURRENT_BINARY_DIR}/THCGeneral.h
+          THCGeneral.hpp
           THCBlas.h
           THCSleep.h
           THCStorage.h
