--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -560,6 +560,9 @@
 - func: eye(int64_t n, int64_t m, TensorOptions options={}) -> Tensor
   variants: function
 
+- func: eye_like(Tensor input) -> Tensor
+  variants: function
+
 - func: eye_out(Tensor result, int64_t n) -> Tensor
   variants: function
   dispatch:
