--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -560,7 +560,10 @@
 - func: eye(int64_t n, int64_t m, TensorOptions options={}) -> Tensor
   variants: function
 
-- func: eye_like(Tensor input) -> Tensor
+- func: eye_like(Tensor self) -> Tensor
+  variants: function
+
+- func: eye_like(Tensor self, *, TensorOptions options) -> Tensor
   variants: function
 
 - func: eye_out(Tensor result, int64_t n) -> Tensor
