--- a/aten/src/THC/THCGeneral.h.in
+++ b/aten/src/THC/THCGeneral.h.in
@@ -144,7 +144,7 @@ THC_API void* THCudaMalloc(THCState *state, size_t size);
 THC_API void THCudaFree(THCState *state, void* ptr);
 
 #ifdef __cplusplus
-SupervisedPtr THCudaHostAlloc(THCState *state, size_t size);
+at::SupervisedPtr THCudaHostAlloc(THCState *state, size_t size);
 #endif
 
 THC_API void THCudaHostRecord(THCState *state, void *ptr);
