Move non-dimension reduction var/std to native wrappers.
This is to unify the handling of empty tensors in std/var between the dimension reduce and all reduce cases.
Also to avoid triggering ubsan errors around divide by 0.

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1305,6 +1305,8 @@
     CPU: _sqrt_out_cpu
     CUDA: _sqrt_out_cuda
 
+- func: std(Tensor self, bool unbiased=true) -> Tensor
+
 - func: std(Tensor self, int64_t dim, bool unbiased=true, bool keepdim=false) -> Tensor
 
 - func: std_out(Tensor result, Tensor self, int64_t dim, bool unbiased=true, bool keepdim=false) -> Tensor
@@ -1418,6 +1420,8 @@
 
 - func: unsqueeze_(Tensor self, int64_t dim) -> Tensor
   variants: method
+
+- func: var(Tensor self, bool unbiased=true) -> Tensor
 
 - func: var(Tensor self, int64_t dim, bool unbiased=true, bool keepdim=false) -> Tensor
 
