--- a/caffe2/CMakeLists.txt
+++ b/caffe2/CMakeLists.txt
@@ -263,6 +263,8 @@ if(USE_ROCM)
      set_source_files_properties(${Caffe2_HIP_SRCS} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 1)
   ENDIF()
   hip_add_library(caffe2_hip ${Caffe2_HIP_SRCS})
+
+  # Since PyTorch files contain HIP headers, these flags are required for the necessary definitions to be added.
   set_target_properties(caffe2_hip PROPERTIES COMPILE_FLAGS ${HIP_HIPCC_FLAGS})
   target_link_libraries(caffe2_hip PUBLIC caffe2)
   target_link_libraries(caffe2_hip PUBLIC ${Caffe2_HIP_DEPENDENCY_LIBS})
