--- a/caffe2/python/CMakeLists.txt
+++ b/caffe2/python/CMakeLists.txt
@@ -5,7 +5,7 @@ set(Caffe2_CPU_PYTHON_SRCS
 )
 
 # ---[ MKL binding
-if(USE_MKL AND USE_MKLML)
+if(USE_MKLML)
   set(Caffe2_CPU_PYTHON_SRCS
       ${Caffe2_CPU_PYTHON_SRCS}
       "/pybind_state_mkl.cc"
@@ -30,7 +30,7 @@ prepend(Caffe2_HIP_PYTHON_SRCS ${CMAKE_CURRENT_SOURCE_DIR} ${Caffe2_HIP_PYTHON_S
 
 
 # --[ Some special handling for ideep binding as we need to build with "-mavx2"
-if(USE_MKL AND USE_IDEEP AND CAFFE2_COMPILER_SUPPORTS_AVX2_EXTENSIONS)
+if(USE_IDEEP AND CAFFE2_COMPILER_SUPPORTS_AVX2_EXTENSIONS)
   file(GLOB_RECURSE ideep_srcs *_ideep.cc)
   add_library(Caffe2_ideep_pybind OBJECT ${ideep_srcs})
   add_dependencies(Caffe2_ideep_pybind Caffe_PROTO Caffe2_PROTO)
