--- a/aten/src/TH/THGeneral.h.in
+++ b/aten/src/TH/THGeneral.h.in
@@ -21,6 +21,11 @@
 #include <mkl_vsl.h>
 #endif
 
+#ifdef __cplusplus
+#include <ATen/ATenGeneral.h>
+#include <ATen/ArrayRef.h>
+#endif
+
 #cmakedefine USE_BLAS
 #cmakedefine USE_LAPACK
 #cmakedefine BLAS_F2C
@@ -80,7 +85,13 @@ typedef struct {
 TH_API double THLog1p(const double x);
 TH_API double THLog2(const double x);
 TH_API double THExpm1(const double x);
-TH_API THDescBuff _THSizeDesc(const int64_t *size, const int64_t ndim);
+
+#ifdef __cplusplus
+// Mangled so we can have an overload
+AT_API THDescBuff _THSizeDesc(const int64_t *size, const int64_t ndim);
+AT_API THDescBuff _THSizeDesc(at::ArrayRef<int64_t> size, const int64_t ndim);
+#endif
+
 TH_API TH_NO_RETURN void _THError(const char *file, const int line, const char *fmt, ...);
 TH_API void _THAssertionFailed(const char *file, const int line, const char *exp, const char *fmt, ...);
 TH_API void THSetErrorHandler(THErrorHandlerFunction new_handler, void *data);
