--- a/aten/src/TH/THGeneral.h.in
+++ b/aten/src/TH/THGeneral.h.in
@@ -86,13 +86,9 @@ TH_API double THLog1p(const double x);
 TH_API double THLog2(const double x);
 TH_API double THExpm1(const double x);
 
-#ifdef __cplusplus
-// Mangled so we can have an overload
-AT_API THDescBuff _THSizeDesc(const int64_t *size, const int64_t ndim);
-AT_API THDescBuff _THSizeDesc(at::ArrayRef<int64_t> size, const int64_t ndim);
-#endif
 
 TH_API TH_NO_RETURN void _THError(const char *file, const int line, const char *fmt, ...);
+TH_API THDescBuff _THSizeDesc(const int64_t *size, const int64_t ndim);
 TH_API void _THAssertionFailed(const char *file, const int line, const char *exp, const char *fmt, ...);
 TH_API void THSetErrorHandler(THErrorHandlerFunction new_handler, void *data);
 TH_API void THSetDefaultErrorHandler(THErrorHandlerFunction new_handler, void *data);
